<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">UpCare</string>
    <string-array name="step_array">
        <item>5</item>
        <item>10</item>
        <item>15</item>
        <item>20</item>
        <item>25</item>
        <item>30</item>
        <item>35</item>
        <item>40</item>
        <item>45</item>
        <item>50</item>
        <item>60</item>
    </string-array>
    <string-array name="gander_array">
        <item>Male</item>
        <item>Female</item>
    </string-array>
    <string-array name="type_array">
        <item>Patient</item>
        <item>Doctor</item>
        <item>Hospital</item>
    </string-array>
    <string-array name="HC_array">
        <item>Clinic</item>
        <item>Hospital</item>
    </string-array>
    <string-array name="countries_array">
        <item>Dammam</item>
        <item>Khobar</item>
        <item>Riyadh</item>
    </string-array>
    <string-array name="spiciality_array">
        <item>Dermatology (Skin)</item>
        <item>Dentistry (Teeth)</item>
        <item>Psychiatry (Mental, Emotional or Behavioral Disorders)</item>
        <item>Pediatrics and New Born (Child)</item>
        <item>Neurology (Brain and Nerves)</item>
        <item>Orthopedics (Bones)</item>
        <item>Gynaecology and Infertility</item>
        <item>Ear, Nose and Throat</item>
        <item>Cardiology and Vascular Disease (Heart)</item>
        <item>Allergy and Immunology (Sensitivity and Immunity)</item>
        <item>Andrology and Male Infertility</item>
        <item>Audiology</item>
        <item>Cardiology and Thoracic Surgery (Heart and Chest)</item>
        <item>Chest and Respiratory</item>
        <item>Diabetes and Endocrinology</item>
        <item>Diagnostic Radiology (Scan Centers)</item>
        <item>Dietitian and Nutrition</item>
        <item>Elders (Old People Health)</item>
        <item>Family Medicine</item>
        <item>Gastroenterology and Endoscopy</item>
        <item>General Practice</item>
        <item>General Surgery</item>
        <item>Hematology</item>
        <item>Hepatology (Liver Doctor)</item>
        <item>Internal Medicine</item>
        <item>IVF and infertility</item>
        <item>Laboratories</item>
        <item>Nephrology</item>
        <item>Neurosurgery (Brain and Nerves Surgery)</item>
        <item>Obesity and Laparoscopic Surgery</item>
        <item>Oncology (Tumor)</item>
        <item>Oncology Surgery (Tumor Surgery)</item>
        <item>Ophthalmology (Eyes)</item>
        <item>Osteopathy (Osteopath Medicine)</item>
        <item>Pain Management</item>
        <item>Pediatric Surgery</item>
        <item>Phoniatrics (Speech)</item>
        <item>Physiotherapy and Sport Injuries</item>
        <item>Plastic Surgery</item>
        <item>Rheumatology</item>
        <item>Spinal Surgery</item>
        <item>Urology (Urinary System)</item>
        <item>Vascular Surgery (Arteries and Vien Surgery)</item>

    </string-array>
    <string-array name="Degree_array">
        <item>Professor</item> 
        <item>Lecturer</item> 
        <item>Consultant</item> 
        <item>Specialist</item> 
    </string-array>
    <string-array name="insurance_array">
        <item>ACIG</item>
        <item>Amana</item>
        <item>AL ALAMIYA</item>
        <item>AXA</item>
        <item>alnima tokio</item>
        <item>AL-ETIHAD</item>
        <item>ALSAGR</item>
        <item>Allianz</item>

        <item>Arabian Shield </item>
        <item>AlRajhi</item>

        <item>Bupa</item>
        <item>BURUJ</item>
        <item>ENAYA</item>
        <item>GGI</item>
        <item>GULF</item>


        <item>MetLife</item>
        <item>malath</item>
        <item>MEDGULF</item>

        <item>SALAMA</item>
        <item>SOLIDARITY</item>
        <item>Wafa</item>
        <item>Walaa</item>

        <item>Tawuniya</item>


    </string-array>
    <string-array name="discount_array">
        <item>05</item>
        <item>05</item>
        <item>05</item>
        <item>05</item>
        <item>05</item>
        <item>05</item>
        <item>05</item>
        <item>05</item>
        <item>05</item>
        <item>05</item>
        <item>05</item>
        <item>05</item>
        <item>05</item>
        <item>05</item>
    </string-array>
    <string name="title_activity_maps">Map</string>
    <string name="title_activity_home">Home</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="share_body_link" translatable="false">https://play.google.com/store/apps/details?id=Carnival</string>
    <string name="share_title_chooser">Share App</string>
    <string name="empty_name_field_msg">Please enter the name</string>
    <string name="empty_age_field_msg">Please enter the age</string>
    <string name="empty_address_field_msg">Please set the address</string>
    <string name="empty_time_field_msg">Please set the time</string>
    <string name="empty_day_field_msg">Please enter the day</string>
    <string name="network_connection_msg">Please check the network connection</string>
    <string name="full_name">Full Name</string>
    <string name="calendar">Calendar</string>
    <string name="my_patients">My patients</string>
    <string name="home">Home</string>
    <string name="my_reservations">My reservations</string>
    <string name="profile">Profile</string>
    <string name="menu">Menu</string>
    <string name="hospital_home">Home</string>
    <string name="hospital_my_doctor">My Doctor</string>
    <string name="hospital_menu">Menu</string>
    <string name="app_version">Version 1.0</string>
    <string name="chat_room">Chat Room</string>
    <string name="Profile">Profile</string>
    <string name="doctor_map">Doctor Map</string>
    <string name="rate_us">Rate Us</string>
    <string name="contact_us">Contact us</string>
    <string name="share">Share this app</string>
    <string name="about">About</string>
    <string name="sign_in">Sign in</string>
    <string name="sign_out">Sign out</string>
    <string name="hospitals">Hospitals</string>
    <string name="no_bookings_msg">No bookings this day!</string>
    <string name="no_appointments_msg">No appointments for booking !</string>
    <string name="shortcut">ChatRoom</string>
    <string name="empty_field_msg">Please fill the field</string>
    <string name="invalid_number_msg">please enter a valid number</string>
    <string name="error_location_provider">Error Location Provider</string>
    <string name="mylocation">My Location</string>
    <string name="exitapp">Exit Application?</string>
    <string name="click_yes_to_exit">Click yes to exit!</string>
    <string name="yes">Yes</string>
    <string name="noo">No</string>
    <string name="import_image_from">Import image from:</string>
    <string name="select_picture">Select Picture</string>
    <string name="an_error_occurred">an error occurred</string>
    <string name="you_should_fill_all_fields">you should fill all fields</string>
    <string name="an_error_occurred_while_uploading_image">an error occurred while  uploading image</string>
    <string name="please_check_the_network_connection">please check the network connection</string>
    <string name="tramp_data_saved">tramp data saved</string>
    <string name="you_should_log_in_firstly">You should log in firstly</string>
    <string name="edit_your_data">Edit your data</string>
    <string name="please_give_us_permission_so_you_can_use_the_app">Please Give us permission so you can use the app</string>
    <string name="select_time">Select Time</string>
    <string name="please_fill_the_address">Please fill the address</string>
    <string name="please_fill_starting_time">Please fill starting time</string>
    <string name="please_fill_ending_times">Please fill ending times</string>
    <string name="ending_time_must_be_after_starting_time_and_in_the_same_day">Ending time must be after starting time /n and in the same day</string>
    <string name="error_we_didnot_get_the_location_please_try_again_after_few_seconds">Error we didn\'t get the Location   Please try again after Few seconds</string>
    <string name="permission_not_granted">Permission not granted</string>
    <string name="failed">Failed!</string>
    <string name="selected">selected!</string>
    <string name="doctor_is_on">Doctor is ON</string>
    <string name="doctor_is_off">Doctor is OFF</string>
    <string name="name">Name</string>
    <string name="doctor_is_name">Doctor\'s name</string>
    <string name="doctor_is_state_and_city">Doctor\'s state and city</string>
    <string name="doctor_is_specialty">Doctor\'s specialty</string>
    <string name="doctor_is_degree">Doctor\'s degree</string>
    <string name="doctor_is_phone_number">Doctor\'s Phone Number</string>
    <string name="detection_price">Detection price</string>
    <string name="average_detection_time_in_min">Average detection time in min</string>
    <string name="upload_end">Upload end</string>
    <string name="please_fill_the_field">Please fill the field</string>
    <string name="state_city_region">State/ City/ Region</string>
    <string name="specialty">Specialty</string>
    <string name="degree">Degree</string>
    <string name="phone_number">Phone Number</string>
    <string name="min">min.</string>
    <string name="not_yet">Not yet</string>
    <string name="email_is_required">Email is required</string>
    <string name="please_enter_a_valid_email">Please enter a valid email</string>
    <string name="minimum_length_of_password_should_be_6">Minimum length of password should be 6</string>
    <string name="password_is_required">Password is required</string>
    <string name="signin_sccess">SIGNIN SUCCESS</string>
    <string name="reset_password_dialog_title">reset password message</string>
    <string name="sending_email">sending email</string>
    <string name="ok">OK</string>
    <string name="reset_password_error_message">reset password error message</string>
    <string name="you_cannott_send_empty_message">You can\'t send empty message</string>
    <string name="active_now">Active Now</string>
    <string name="ofline_now">Ofline Now</string>
    <string name="sending_photo">Sending photo........</string>
    <string name="photo_sent">Photo sent.........</string>
    <string name="new_message">New Message</string>
    <string name="new_photo_message">New Photo Message</string>
    <string name="select_insurance">Select Insurance</string>
    <string name="dismiss">dismiss</string>
    <string name="cancel">Cancel</string>
    <string name="submit">Submit</string>
    <string name="detection_time">Detection time:</string>
    <string name="from">From:</string>
    <string name="starting_time">Starting time</string>
    <string name="to2">To:</string>
    <string name="ending_time">Ending time</string>
    <string name="press_close_chat_if_you_want_to_block_chat">* Press close chat if you want to block chat</string>
    <string name="always_on">Always on</string>
    <string name="colse_chat">Colse Chat</string>
    <string name="please_enter_your_data">Please enter your data :</string>
    <string name="select_what_you_want_to_do">Select what you want to do</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="gallery">Gallery</string>
    <string name="open_camera">Open Camera</string>
    <string name="maximum_number_of_reservations">Maximum number of reservations</string>
    <string name="discount">Discount</string>
    <string name="discount_percentage">Discount percentage</string>
    <string name="close">close</string>
    <string name="open">open</string>
    <string name="note_text">note text</string>
    <string name="what_about_you">What about you</string>
</resources>