<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

       <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
           android:background="@drawable/heder_menu"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginLeft="16dp"

            android:text="@string/edit_your_data"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/text_title"

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="8dp"
            android:text="@string/please_enter_your_data"
            android:textColor="@android:color/black"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/max_data_tv_e"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:hint="@string/maximum_number_of_reservations"
            android:paddingLeft="10dp"
            android:maxLines="1"
            android:inputType="number"
            android:textColor="#000"
            android:textColorHint="#b7b1b1"
            android:textSize="14sp" />

           <CheckBox
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:id="@+id/discount_cb"
               android:text="@string/discount"
               android:textSize="14sp"
               android:padding="4dp"
               android:visibility="gone"
               android:layout_marginLeft="8dp"
               android:layout_marginTop="8dp"
               />
          <LinearLayout
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:id="@+id/linear_discount"
              android:layout_marginRight="8dp"
              android:visibility="gone"
              android:layout_marginLeft="8dp"
              >
              <EditText
                  android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:id="@+id/discount_et"
                  android:layout_weight="1"
                  android:textSize="14sp"
                  android:hint="@string/discount_percentage"
                  android:background="@drawable/white_rect"
                  android:inputType="numberDecimal"
                  android:padding="4dp"
                  />
              <TextView
                  android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:layout_weight="1"
                  android:padding="4dp"
                  android:text="%"/>
          </LinearLayout>



        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/cancel_tv_max"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="right"
                android:text="@string/cancel"
                android:textColor="@color/colorPrimary"
                android:textSize="16sp"
                android:textStyle="bold" />
            <TextView
                android:id="@+id/close_tv_max"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="right"
                android:text="@string/close"
                android:textColor="@color/colorPrimary"
                android:textSize="16sp"
                android:textStyle="bold" />
            <TextView
                android:id="@+id/open_tv_max"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="right"
                android:text="@string/open"
                android:textColor="@color/colorPrimary"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/submit_tv_max"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="right"
                android:text="@string/submit"
                android:textColor="@color/colorPrimary"
                android:textSize="16sp"
                android:textStyle="bold" />

        </LinearLayout>
    </LinearLayout>
</RelativeLayout>