<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center"
    android:background="@drawable/heder_menu"
    android:orientation="vertical">

    <TextView
        android:id="@+id/text_select_note_dialog"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="8dp"
        android:text="@string/select_what_you_want_to_do"
        android:textColor="@android:color/black"
        android:textSize="16sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginRight="4dp"
        android:layout_marginLeft="4dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/edit_select_dialog"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="4dp"
            android:layout_marginLeft="4dp"
            android:textSize="12dp"
            android:backgroundTint="@color/colorPrimary"
            android:text="@string/edit" />

        <Button
            android:id="@+id/delete_select_dialog"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="4dp"
            android:textSize="12dp"
            android:layout_marginLeft="4dp"
            android:backgroundTint="@color/colorPrimary"
            android:text="@string/delete" />


        <Button
            android:id="@+id/cancel_select_dialog"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="4dp"
            android:textSize="12dp"
            android:layout_marginLeft="4dp"
            android:backgroundTint="@color/colorPrimary"
            android:text="@string/cancel"/>

    </LinearLayout>


</LinearLayout>