<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/heder_menu">

    <EditText
      android:hint="@string/what_about_you"
        android:layout_width="match_parent"
        android:gravity="center"
        android:padding="30dp"
        android:layout_height="wrap_content"
        android:id="@+id/textView"
        android:textSize="20dp"
        android:layout_marginBottom="40dp"/>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:text="@string/ok"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/btn_ok"
            android:background="@drawable/button_round_red"
            android:layout_weight="1"
            android:layout_marginRight="10dp"
            android:layout_marginLeft="10dp" />

        <Button
            android:text="@string/cancel"
            android:background="@drawable/button_round_blue"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/btn_close"
            android:layout_weight="1"
            android:layout_marginRight="10dp"
            android:layout_marginLeft="10dp"/>
    </LinearLayout>

</LinearLayout>