<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="16dp"
    android:gravity="center"
    android:background="@drawable/heder_menu"
    >


    <TextView
        android:id="@+id/gallery_tv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_margin="10dp"
        android:background="@drawable/roundwhite"
        android:gravity="center"
        android:padding="15dp"
        android:text="@string/gallery"
        android:textColor="#000"
        android:textSize="20dp" />

    <TextView
        android:id="@+id/open_camera_tv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:background="@drawable/roundwhite"
        android:gravity="center"
        android:padding="15dp"
        android:text="@string/open_camera"
        android:textColor="#000"
        android:textSize="20dp" />

    <TextView
        android:id="@+id/dismiss_dialog"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/cancel"
        android:padding="8dp"
        android:textSize="16sp"
        android:gravity="right"
        android:layout_marginRight="16dp"
        android:textStyle="bold"
        android:textColor="@color/colorPrimaryDark"
        />

</LinearLayout>