<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@drawable/heder_menu">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:gravity="center"
        android:orientation="vertical">


        <TextView
            android:id="@+id/text_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginBottom="5dp"
            android:text="@string/detection_time"
            android:textColor="@android:color/black"
            android:textSize="16sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:layout_marginBottom="15dp"
            android:orientation="horizontal">

            <TextView

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="8dp"
                android:layout_marginBottom="8dp"
                android:text="@string/from"
                android:textColor="@android:color/black"
                android:textSize="16sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:layout_marginBottom="0dp"
                android:background="@drawable/roundwhite"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/timer_chat"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginLeft="16dp"
                    android:layout_marginRight="8dp"
                    android:layout_marginBottom="8dp"
                    android:src="@drawable/ic_timer" />

                <EditText
                    android:id="@+id/start_time_chat"

                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="5dp"
                    android:layout_weight="1"
                    android:enabled="false"
                    android:gravity="center"
                    android:hint="@string/starting_time"
                    android:textAppearance="@style/Base.TextAppearance.AppCompat.Small"
                    android:textColor="#000" />


            </LinearLayout>


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"

            android:layout_marginBottom="15dp"
            android:orientation="horizontal">


            <TextView

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="8dp"
                android:layout_marginBottom="8dp"
                android:text="@string/to2"
                android:textColor="@android:color/black"
                android:textSize="16sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:layout_marginBottom="0dp"
                android:background="@drawable/roundwhite"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/timer_off_chat"

                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="16dp"
                    android:layout_marginRight="8dp"
                    android:layout_marginBottom="8dp"
                    android:gravity="center_vertical"
                    android:src="@drawable/ic_timer_off" />

                <EditText
                    android:id="@+id/ending_time_chat"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:layout_marginRight="5dp"
                    android:layout_weight="1"
                    android:enabled="false"
                    android:gravity="center"
                    android:hint="@string/ending_time"
                    android:textAppearance="@style/Base.TextAppearance.AppCompat.Small"
                    android:textColor="#000" />


            </LinearLayout>


        </LinearLayout>


        <TextView

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="25dp"
            android:layout_marginRight="8dp"
            android:layout_marginBottom="8dp"
            android:text="@string/press_close_chat_if_you_want_to_block_chat"
            android:textColor="@android:color/holo_red_dark"
            android:textSize="12sp" />


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginBottom="50dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/cancel_t"
                android:layout_width="130dp"
                android:layout_height="20dp"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/cancel"
                android:textColor="#000"
                android:textSize="16dp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/on_t"
                android:layout_width="130dp"
                android:layout_height="20dp"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/always_on"
                android:textColor="#07e707"
                android:textSize="12dp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/close_t"
                android:layout_width="130dp"
                android:layout_height="20dp"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/colse_chat"
                android:textColor="#ef0404"
                android:textSize="12dp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/submit_t"
                android:layout_width="130dp"
                android:layout_height="20dp"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/submit"
                android:textColor="#000"
                android:textSize="16dp"
                android:textStyle="bold" />

        </LinearLayout>
    </LinearLayout>
</RelativeLayout>