<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/heder_menu"
    android:orientation="vertical"
    android:padding="8dp">

    <TextView
        android:id="@+id/text_display_note"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:text="@string/note_text"
        android:textColor="@android:color/black"
        android:textSize="20sp" />
    <EditText
        android:id="@+id/new_text_display_note"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:text="new note text"
        android:textColor="@android:color/black"
        android:visibility="gone"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/text_date_display_note"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:text="2018-11-9 12:00 PM"
        android:textColor="@android:color/darker_gray"
        android:textSize="12sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="horizontal">

        <Button
            android:id="@+id/edit_btn_display_note"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:backgroundTint="@color/colorPrimary"
            android:text="@string/edit"
            android:textColor="@color/colorPrimaryDark" />

        <Button
            android:id="@+id/save_btn_display_note"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:backgroundTint="@color/colorPrimary"
            android:text="Save"
            android:visibility="gone"
            android:textColor="@color/colorPrimaryDark" />

        <Button
            android:id="@+id/delete_btn_display_note"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:backgroundTint="@color/colorPrimaryDark"
            android:text="@string/delete"
            android:textColor="@color/colorPrimary" />

    </LinearLayout>

</LinearLayout>